AC_PREREQ(2.61)
AC_INIT([Math Lib], [0.1], [jp3@ecs.soton.ac.uk])
AC_CONFIG_SRCDIR([driver.cc])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
