lib_LTLIBRARIES = libubcsat.la

libubcsat_la_SOURCES = \
ubcsat.o               \
algorithms.o           \
gsat.o                 \
ubcsat-alg.o           \
ubcsat-parms.o         \
novelty.o              \
walksat.o              \
weighted.o             \
reports.o              \
gwsat.o                \
ubcsat-cnf.o           \
ubcsat-reports.o       \
rnovelty.o             \
ubcsat-defaults.o      \
hsat.o                 \
ubcsat-help.o          \
ubcsat-time.o          \
saps.o                 \
gsat-tabu.o            \
hwsat.o                \
ubcsat-mem.o           \
ubcsat.o               \
walksat-tabu.o         \
ubcsat-io.o            \
mylocal.o              \
mt19937ar.o

libubcsat_la_CXXFLAGS = -Wall -O3