lib_LTLIBRARIES = libfileio.la

libfileio_la_SOURCES = \
configreader.cc        \
featurelabel.cc        \
modelreader.cc         \
modelwriter.cc         \
reader.cc              \
model.cc               \
configreader.hh        \
featurelabel.hh        \
modelreader.hh         \
modelwriter.hh         \
pputils.hh             \
reader.hh              \
model.hh               \
triple.hpp

libfileio_la_CPPFLAGS =
libfileio_la_CXXFLAGS = -Wall -std=c++98
