lib_LTLIBRARIES = libubcsat.la

libubcsat_la_SOURCES = \
ubcsat.cc               \
algorithms.cc           \
gsat.cc                 \
ubcsat-alg.cc           \
ubcsat-parms.cc         \
novelty.cc              \
walksat.cc              \
weighted.cc             \
reports.cc              \
gwsat.cc                \
ubcsat-cnf.cc           \
ubcsat-reports.cc       \
rnovelty.cc             \
ubcsat-defaults.cc      \
hsat.cc                 \
ubcsat-help.cc          \
ubcsat-time.cc          \
saps.cc                 \
gsat-tabu.cc            \
hwsat.cc                \
ubcsat-mem.cc           \
walksat-tabu.cc         \
ubcsat-io.cc            \
mylocal.cc              \
mt19937ar.cc            \
interface.cc

libubcsat_la_CXXFLAGS = -Wall -O3